# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: run_tests.yml
pre_commit_hooks/: check_case_insensitive_paths.py  check_makefile.py
testing/resources/: bad_makefile.notmakefile  fixable_makefile_spaces_not_tabs.makefile  fixable_makefile_spaces_not_tabs.notmakefile  fixed_makefile_spaces_not_tabs.makefile  ok_makefile.makefile
tests/: check_case_insensitive_paths_test.py  check_makefile_test.py
